chat-test, empty, bg

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
   @@include('./blocks/main/_head.html', { "title": "Главная", })
 
   <body>
+    <div class="bg"></div>
+
     <main class="main">
       <!-- sidebar
-    ======================================================= -->
+      ======================================================= -->
       <section class="sidebar shadow">
         <div class="sidebar__box">
           <div class="sidebar__header">
@@ -159,7 +161,7 @@
       <!-- sidebar end -->
 
       <!-- chat
-    ======================================================= -->
+      ======================================================= -->
       <section class="chat">
         <div class="container">
           <div class="chat__inner">
