--- a/src/blocks/main/_head.html
+++ b/src/blocks/main/_head.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Dmitriy Bozhko / DIGIKRASH" />
 
     <!-- Favicon -->
+    <!-- <link rel="icon" href="./favicon.png" type="image/png"> -->
     <link rel="icon" href="./favicon.png" type="image/png">
 
     <!-- Styles -->
